# CellularAutomata

./: CMakeLists.txt  README.md  main.cpp
Huegene/: CMakeLists.txt  Cell.h  Colour.h  imguiData.h  main.cpp
conwaysGameOfLife/: CMakeLists.txt  main.cpp
langtonsAnt/: CMakeLists.txt  main.cpp
